Fix the navbar to work with login/logout correctly.

--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -227,7 +227,11 @@ h1, h2, h3 {
 }
 
 .text-error {
-    color: red;
+    color: var(--qudcolor-R);
+}
+
+.text-success {
+    color: var(--qudcolor-G);
 }
 
 .text-truncate {
