--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -29,6 +29,7 @@
     --table-highlight: #0b332a;
     --table-bg: var(--qudcolor-K);
     --bg-color: #061c17;
+    --static-scanline-zindex: 100;
 
     /*
      * Scanline animation configuration
@@ -103,7 +104,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    z-index: 0;
+    z-index: -100;
     margin: 0;
     padding: 0;
 }
@@ -114,7 +115,7 @@
     -webkit-background-size: 100% 4px;
     width: 100vw;
     height: 100vh;
-    z-index: 100;
+    z-index: var(--static-scanline-zindex);
     pointer-events: none;
 }
 
@@ -124,13 +125,13 @@ body {
     border: 0;
 }
 
-main, footer {
-    position: relative;
-    z-index: 200;
-}
-
 main {
     min-height: 60vh;
+}
+
+main, footer {
+    position: relative;
+    z-index: calc(var(--static-scanline-zindex) + 1);
 }
 
 footer {
